--- a/AdvancePython-Assignment1.ipynb
+++ b/AdvancePython-Assignment1.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Q1. What is the purpose of Python's OOP?\n",
     "\n",
-    "Ans: Python is called both Scripting and Object Oriented Programming language is mainly paradigm that uses both object and classes in programming. It mainly aims to implement reak world entities like inheritance, Polymorphisms,encapsulation in the programming."
+    "Ans: Python is called both Scripting and Object Oriented Programming language is mainly paradigm that uses both object and classes in programming. It mainly aims to implement real world entities like inheritance, Polymorphisms,encapsulation in the programming."
    ]
   },
   {
